[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = [ "dynamic_linking" ] }
bevy_hanabi = { version = "0.7.0", default-features = false, features = [ "2d" ] }
bevy_rapier2d = "0.22.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
debug = []
